--- a/examples/dev_FVCOM_2D_ds.ipynb
+++ b/examples/dev_FVCOM_2D_ds.ipynb
@@ -313,12 +313,14 @@
     "        #x_range=kwargs.get('x_range', (self.x.min(), self.x.max()))\n",
     "        #y_range=kwargs.get('y_range', (self.y.min(), self.y.max()))\n",
     "        #z_range=kwargs.get('z_range', (self.variables[item].min(), self.variables[item].max()))\n",
+    "        ### Set default values for **kwargs \n",
     "        width = kwargs.get('width', 500)\n",
     "        height = kwargs.get('height', 500)\n",
     "        bgcolor = kwargs.get('bgcolor', 'lightgrey')\n",
     "        show_grid = kwargs.get('show_grid', False)\n",
     "        xlabel = kwargs.get('xlabel', 'X (km)')\n",
     "        ylabel = kwargs.get('ylabel', 'Y (km)')\n",
+    "        cmap = kwargs.get('cmap', 'viridis')\n",
     "        colorbar = kwargs.get('colorbar', True)\n",
     "        colorbar_cmap = kwargs.get('colorbar_cmap', 'Reds') # Blues\n",
     "        colorbar_n = kwargs.get('colorbar_n', 256)\n",
@@ -349,14 +351,13 @@
     "        plot_opts = dict(colorbar_opts = colorbar_opts)\n",
     "\n",
     "        p = self.__plot_2dh(item=item, time=time, sigma=sigma)\n",
-    "        #p_options = opts.TriMesh(cmap='viridis')\n",
-    "        #p = p.opts(p_options)\n",
     "        if z_range is None or z_range == False:\n",
     "            p = rasterize(p, x_range=x_range, y_range=y_range)\n",
     "        else:\n",
     "            p = rasterize(p.redim.range(**{item : z_range}), x_range=x_range, y_range=y_range)\n",
-    "\n",
-    "        p = p.opts(cmap=\"viridis\")\n",
+    "            print('HERE')\n",
+    "        #p = p.opts(cmap=\"viridis\")\n",
+    "        p = p.opts(cmap=cmap, colorbar_opts=colorbar_opts)\n",
     "        timestamp_txt = self.plot_timestamp(time, timestamp_location)\n",
     "        # debug jsasaki\n",
     "        #return p.opts(plot=plot_opts).redim.label(x=xlabel, y=ylabel) * timestamp_txt\n",
@@ -483,10 +484,12 @@
     "#fvcom.splot_2dh(item='zeta', time=50, x_range=None, y_range=None, z_range=None )\n",
     "\n",
     "p = fvcom.splot_2dh(item='salinity',time=10, sigma=0, x_range= None, y_range=None, z_range=(0, 35), \\\n",
-    "                toolbar_location='east', timestamp_location=(270, 148), colorbar_title='Sal')\n",
+    "                timestamp_location=(270, 148), colorbar_title='Sal')\n",
     "coastline = fvcom.plot_coastline(color='red', line_width=0.5, x_range=None, y_range=None)\n",
     "#p * coastline\n",
-    "p_options = opts.Image(tools=['hover'], width=600, height=250, colorbar=True)\n",
+    "#p_options = opts.Image(tools=['hover'], colorbar_position='right', colorbar_opts={\"title\":\"Salinity\"}, width=600, height=250, colorbar=True)\n",
+    "\n",
+    "p_options = opts.Image(tools=['hover'], colorbar_position='right', width=600, height=250, colorbar=True)\n",
     "p.opts(p_options) * coastline\n",
     "p"
    ]
@@ -638,6 +641,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "%%opts Image RGB [width=500 height=550 bgcolor=\"lightgrey\"]\n",
     "%%opts Image RGB [colorbar_opts={\"title\":\"SL (m)\",\"title_text_font_size\":\"14pt\",\"title_text_baseline\":\"bottom\",\"title_standoff\":12,\"title_text_font_style\":\"normal\",\"major_label_text_font_size\":\"14pt\",\"major_label_text_align\":\"left\",\"label_standoff\":4,\"width\":20}]\n",
     "%%output size=100\n",
@@ -659,35 +663,7 @@
     "\n",
     "#p=dmap_ds * mesh * coastline ### with mesh and coastline\n",
     "p=dmap_ds\n",
-    "\n",
-    "'''\n",
-    "Mod(autosize=False, ### %%optsでサイズ指定が効かないためFalse\n",
-    "    show_grid=False,  ### Set True or False\n",
-    "    xlabel='X (km)', ylabel='Y (km)',\n",
-    "    colorbar_n=10,  ### Do not set %%opts for colorbat, using Mod() is more flexible.\n",
-    "    colorbar_cmap='Reds',\n",
-    "    #xticks=[0,10,20,30],\n",
-    "    #yticks=[0,10,20,30,40,50,60],\n",
-    "    toolbar_location=\"top\", ### None: hide toolbar, \"top\", \"east\", \"west\"\n",
-    "    label_scaler=1.2,  ### Set font size magnification factor\n",
-    "    label_alpha=0.95,  ### Opacity\n",
-    "    colorbar_tick_alpha=0.95,  ### Opacity\n",
-    "    colorbar_outline_alpha=0.95,  ### Opacity\n",
-    "    axis_line_alpha=0.95,  ### Opacity\n",
-    "    major_tick_alpha=0.95,\n",
-    "    minor_tick_alpha=0.95\n",
-    "    ).apply(p)\n",
     "'''"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# `%%opts`を使わず`Mod()`だけで制御\n",
-    "## Unimportant and just for reference for how to control without `%%opts`\n",
-    "- olorbar_optsが効かない．holoextのコードを直接書き換える，または，customize_bokeh()で対応する\n",
-    "- 当初はファイル出力のため検討したが，ファイル出力はフレーム毎に出力する必要があるため，この方法は不要．"
    ]
   },
   {
@@ -699,12 +675,13 @@
     "colorbar_opts={\"title\":\"SL (m)\",\"title_text_font_size\":\"16pt\",\"title_text_baseline\":\"bottom\",\"title_standoff\":20,\\\n",
     "               \"title_text_font_style\":\"normal\",\"major_label_text_font_size\":\"14pt\",\"major_label_text_align\":\"left\",\\\n",
     "               \"label_standoff\":4,\"width\":20}\n",
-    "plot_opts=dict(width=500, height=550, colorbar=True, colorbar_opts=colorbar_opts)\n",
-    "\n",
+    "#plot_opts=dict(width=500, height=550, colorbar=True, colorbar_opts=colorbar_opts)\n",
     "\n",
     "#colorbar_opts={\"title\":\"SL (m)\",\"title_text_font_size\":\"14pt\",\"title_text_baseline\":\"bottom\",\"title_standoff\":12,\"title_text_font_style\":\"normal\",\"major_label_text_font_size\":\"14pt\",\"major_label_text_align\":\"left\",\"label_standoff\":4,\"width\":20}\n",
     "#item='salinity'\n",
     "item='zeta'\n",
+    "colorbar_opts = {'title':'Surface elevation (m)'}\n",
+    "\n",
     "#x_range=(0,22); y_range=(0,33)\n",
     "x_range=None; y_range=None\n",
     "#z_range=(10,35)\n",
@@ -719,27 +696,12 @@
     "\n",
     "p = dmap_ds\n",
     "\n",
-    "'''\n",
-    "saved = Mod(width=500, height=550, bgcolor='lightgrey',\n",
-    "            show_grid=False,  ### Set True or False\n",
-    "            xlabel='X (km)', ylabel='Y (km)',\n",
-    "            colorbar_n=10,  ### Do not set %%opts for colorbat, using Mod() is more flexible.\n",
-    "            colorbar_cmap='Reds',\n",
-    "            #colorbar_title=\"SL (m)\",\n",
-    "            label_alpha=0.95, ### title_text_alpha (colorbar_dict)\n",
-    "            #xticks=[0,10,20,30],\n",
-    "            #yticks=[0,10,20,30,40,50,60],\n",
-    "            toolbar_location=\"east\", ### None: hide toolbar, \"top\", \"east\", \"west\"\n",
-    "            label_scaler=1,  ### Set font size magnification factor\n",
-    "            colorbar_tick_alpha=0.95,  ### Opacity\n",
-    "            colorbar_outline_alpha=0.95,  ### Opacity\n",
-    "            axis_line_alpha=0.95,  ### Opacity\n",
-    "            major_tick_alpha=0.95,\n",
-    "            minor_tick_alpha=0.95\n",
-    "           ).apply(p)\n",
-    "'''\n",
     "#saved.opts(plot=plot_opts).redim.label(x='X (km)', y='Y (km)')\n",
-    "p.opts(plot=plot_opts).redim.label(x='X (km)', y='Y (km)')\n",
+    "#p.opts(plot=plot_opts).redim.label(x='X (km)', y='Y (km)')\n",
+    "p_options = opts.Image(tools=['hover'], cmap='viridis', colorbar_position='right', width=600, height=250, \\\n",
+    "                       colorbar=True, colorbar_opts=colorbar_opts)\n",
+    "p.opts(p_options).redim.label(x='X (km)', y='Y (km)')\n",
+    "\n",
     "#  * coastline\n",
     "#saved.redim.label(x='X (km)', y='Y (km)') \\\n",
     "#  * fvcom.plot_coastline(color='red', line_width=0.5).redim.range(x=x_range, y=y_range)\n"
@@ -791,20 +753,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%opts Image RGB [width=500 height=550 bgcolor=\"lightgrey\"]\n",
-    "%%opts Image RGB [colorbar=True color_levels=256] (cmap='Reds')\n",
-    "%%opts Image RGB [colorbar_opts={\"title\":\"SL (m)\",\"title_text_font_size\":\"14pt\",\"title_text_baseline\":\"bottom\",\"title_standoff\":12,\"title_text_font_style\":\"normal\",\"major_label_text_font_size\":\"14pt\",\"major_label_text_align\":\"left\",\"label_standoff\":4,\"width\":20}]\n",
-    "%%opts Image RGB [fontsize={\"xlabel\":\"20pt\", \"ylabel\":\"20pt\",\"ticks\":\"20pt\",\"title\":\"20pt\"}]\n",
-    "%%output size=100\n",
-    "%%opts Image RGB [finalize_hooks=[customize_bokeh]]\n",
+    "#%%opts Image RGB [width=500 height=550 bgcolor=\"lightgrey\"]\n",
+    "#%%opts Image RGB [colorbar=True color_levels=256] (cmap='Reds')\n",
+    "#%%opts Image RGB [colorbar_opts={\"title\":\"SL (m)\",\"title_text_font_size\":\"14pt\",\"title_text_baseline\":\"bottom\",\"title_standoff\":12,\"title_text_font_style\":\"normal\",\"major_label_text_font_size\":\"14pt\",\"major_label_text_align\":\"left\",\"label_standoff\":4,\"width\":20}]\n",
+    "#%%opts Image RGB [fontsize={\"xlabel\":\"20pt\", \"ylabel\":\"20pt\",\"ticks\":\"20pt\",\"title\":\"20pt\"}]\n",
+    "#%%output size=100\n",
+    "#%%opts Image RGB [hooks=[customize_bokeh]]\n",
+    "\n",
+    "#%%opts Image RGB [finalize_hooks=[customize_bokeh]]\n",
     "#%%opts Image [width=500 height=550 bgcolor=\"lightgrey\"]\n",
     "#%%opts Image [fontsize={\"ticks\":\"14pt\", \"title\":\"14pt\", \"xlabel\":\"14pt\", \"ylabel\":\"14pt\"}]\n",
     "#%%opts Image [colorbar=True color_levels=256 colorbar_opts={\"width\": 20, \"major_label_text_font_size\":\"12pt\"}] (cmap='ocean_r')\n",
     "#%%opts Image [finalize_hooks=[customize_bokeh]]\n",
     "\n",
     "item='salinity'\n",
-    "x_range=(0,22); y_range=(0,33)\n",
+    "colorbar_opts = {'title':'Salinity (psu)'}\n",
+    "#x_range=(0,22); y_range=(0,33)\n",
+    "#z_range=(10,35)\n",
+    "x_range=None; y_range=None\n",
     "z_range=(10,35)\n",
+    "\n",
     "xlabel='X (km)'; ylabel='Y (km)'\n",
     "timestamp_location=(4,3)\n",
     "\n",
@@ -816,7 +784,10 @@
     "#p = dmap_ds * coastline\n",
     "p = dmap_ds\n",
     "\n",
-    "p.redim.label(x=xlabel, y=ylabel)"
+    "#p.redim.label(x=xlabel, y=ylabel)\n",
+    "p_options = opts.Image(tools=['hover'], cmap='viridis', colorbar_position='right', width=600, height=250, colorbar=True, \\\n",
+    "                       colorbar_opts=colorbar_opts, hooks=[customize_bokeh])\n",
+    "p.opts(p_options).redim.label(x='X (km)', y='Y (km)')\n"
    ]
   },
   {
