Cleaned and modified to use frame_width

--- a/examples/dev_FVCOM_2D_ds.ipynb
+++ b/examples/dev_FVCOM_2D_ds.ipynb
@@ -250,13 +250,15 @@
     "        '''\n",
     "\n",
     "        # Gets **kwargs with default values\n",
-    "        width=kwargs.get('width', 300)\n",
-    "        height=kwargs.get('height', 300)\n",
+    "        #width=kwargs.get('width', 300)\n",
+    "        #height=kwargs.get('height', 300)\n",
     "        line_color=kwargs.get('line_color', 'blue')\n",
     "        line_width=kwargs.get('line_width', 0.1)\n",
     "\n",
-    "        p = self.trimesh.edgepaths.options(width=width, height=height, \n",
-    "                                           line_width=line_width, line_color=line_color)\n",
+    "        # jsasaki debug\n",
+    "        #p = self.trimesh.edgepaths.options(width=width, height=height, \n",
+    "        #                                   line_width=line_width, line_color=line_color)\n",
+    "        p = self.trimesh.edgepaths.options(line_width=line_width, line_color=line_color)\n",
     "\n",
     "        # Set plot range\n",
     "        if x_range is None and y_range is None:\n",
@@ -281,8 +283,8 @@
     "        '''\n",
     "\n",
     "        # Gets **kwargs with default values\n",
-    "        width=kwargs.get('width', 300)\n",
-    "        height=kwargs.get('height', 300)\n",
+    "        #width=kwargs.get('width', 300)\n",
+    "        #height=kwargs.get('height', 300)\n",
     "        color=kwargs.get('color', 'red')\n",
     "        line_width=kwargs.get('line_width', 0.5)\n",
     "\n",
@@ -291,8 +293,10 @@
     "                  (self.x[self.nbe[m,:]][1], self.y[self.nbe[m,:]][1])] \\\n",
     "                 for m in range(len(self.nbe))]\n",
     "\n",
-    "        p = hv.Path(paths).options(width=width, height=height, \n",
-    "                                   color=color, line_width=line_width)\n",
+    "        # jsasaki debug\n",
+    "        #p = hv.Path(paths).options(width=width, height=height, \n",
+    "        #                           color=color, line_width=line_width)\n",
+    "        p = hv.Path(paths).options(color=color, line_width=line_width)\n",
     "\n",
     "        if x_range is None and y_range is None:\n",
     "            return p\n",
@@ -641,8 +645,10 @@
     "                   major_label_text_font_size = \"14pt\", major_label_text_align=\"left\",\n",
     "                   label_standoff=4, width=15)\n",
     "# Customize Image plot.\n",
+    "#p_opts = opts.Image(tools=['hover'], cmap='viridis', colorbar_position='right',\n",
+    "#                    width=600, height=250, colorbar=True, colorbar_opts=colorbar_opts)\n",
     "p_opts = opts.Image(tools=['hover'], cmap='viridis', colorbar_position='right',\n",
-    "                    width=600, height=250, colorbar=True, colorbar_opts=colorbar_opts)\n",
+    "                    frame_width=500, aspect='equal', colorbar=True, colorbar_opts=colorbar_opts)\n",
     "p.redim.label(x='X (km)', y='Y (km)').opts(p_opts)\n",
     "\n",
     "# You may further customize by appending .redim() and .opts() as follows:\n",
@@ -677,10 +683,13 @@
    "outputs": [],
    "source": [
     "opts.defaults(opts.Points(tools=['hover']))\n",
-    "mesh = fvcom.plot_mesh(width=600, height=250, line_color='red', line_width=0.1)\n",
+    "#mesh = fvcom.plot_mesh(width=600, height=250, line_color='red', line_width=0.1)\n",
+    "mesh = fvcom.plot_mesh(line_color='red', line_width=0.1)\n",
     "points1 = fvcom.plot_point(coords1, color='blue', marker='o', size=5)\n",
     "points2 = fvcom.plot_point(coords2, color='green')\n",
-    "mesh * points1 * points2"
+    "p = mesh * points1 * points2\n",
+    "p_opts = opts.Points(frame_width=500, aspect='equal', xlim=(255, 290))\n",
+    "p.opts(p_opts)"
    ]
   },
   {
@@ -717,12 +726,12 @@
    "outputs": [],
    "source": [
     "# Set PNG output file path\n",
-    "pngpath = \"./png/\"\n",
+    "dirpath = \"./png/\"\n",
     "core = \"tri_sal_\"\n",
     "# toolbar='right' for interactive view in a browser\n",
-    "# Possible to zoom in on the browser and output png in it.\n",
-    "# toolbar=None to deactivate this interactivity.\n",
-    "toolbar='right' # None\n",
+    "#     Possible to zoom in on the browser and output png in it.\n",
+    "# toolbar=None to deactivate this interactivity. Useful for PDF export using pyppeteer.\n",
+    "toolbar=None # None, 'right'\n",
     "\n",
     "# Select item to be plotted.\n",
     "item='salinity'; title = \"Salinity (psu)\"; z_range=(0,35)\n",
@@ -733,24 +742,14 @@
     "sigma=0\n",
     "\n",
     "# Set x and y ranges. = None for auto setting (you may change after plotting).\n",
-    "x_range=(252, 290) #None\n",
-    "y_range=(145, 165) # None\n",
+    "x_range=(252, 290) # None, (min, max)\n",
+    "y_range=(145, 165) # None, (min, max)\n",
     "\n",
     "# Set timestamp_location. = None to deactivate\n",
     "timestamp_location=(270, 148)\n",
     "\n",
-    "if not os.path.isdir(pngpath):\n",
-    "    os.makedirs(pngpath)\n",
-    "\n",
-    "#renderer=hv.renderer('bokeh')\n",
-    "# Apply customization options.\n",
-    "# Customize colorbar.\n",
-    "#def fixBottomMargin(plot, element):\n",
-    "#  plot.handles['plot'].min_border_left = 500\n",
-    "#  plot.handles['plot'].min_border_right = 500\n",
-    "#  plot.handles['plot'].min_border_top = 500\n",
-    "#  plot.handles['plot'].min_border_bottom = 500\n",
-    "\n",
+    "if not os.path.isdir(dirpath):\n",
+    "    os.makedirs(dirpath)\n",
     "\n",
     "colorbar_opts=dict(title=title, title_text_font_size=\"16pt\", \n",
     "                   title_text_baseline = \"bottom\",\n",
@@ -758,15 +757,12 @@
     "                   major_label_text_font_size = \"14pt\", major_label_text_align=\"left\",\n",
     "                   label_standoff=4, width=15)\n",
     "p_opts = opts.Image(cmap='viridis', colorbar_position='right',\n",
-    "                    width=600, height=250, colorbar=True, colorbar_opts=colorbar_opts,\n",
+    "                    frame_width=500, aspect='equal', colorbar=True, colorbar_opts=colorbar_opts,\n",
     "                    toolbar=toolbar)\n",
     "                    #hooks=[fixBottomMargin])\n",
     "\n",
-    "#renderer = hv.plotting.mpl.MPLRenderer.instance(dpi=120)\n",
-    "#renderer = hv.renderer('bokeh')\n",
-    "\n",
-    "for time in range(2):\n",
-    "    outputfile = f\"{pngpath}{core}{time:03}\"\n",
+    "for time in range(10):\n",
+    "    outputfile = f\"{dirpath}{core}{time:03}\"\n",
     "\n",
     "    # Create color map.\n",
     "    smap = fvcom.splot_2dh(item=item, time=time, sigma=sigma,\n",
@@ -783,53 +779,17 @@
     "    # Overlay as you like\n",
     "    p = smap * mesh * coastline\n",
     "    hv.save(p, outputfile, fmt='html', backend='bokeh')\n",
-    "    \n",
-    "    #export_png(p, filename=f\"{outputfile}.png\")\n",
-    "    #export_png(smap, filename=\"test.png\")\n",
-    "    #fig = hv.render(p)\n",
-    "    # hv.save(p, filename=outputfile ,fmt='png')\n",
-    "    #hv.output(fig='png')\n",
-    "    #fig = hv.render(p)\n",
-    "    #hv.output(p, fig='png')\n",
-    "    #hv.save(p, outputfile)\n",
-    "    #frame = renderer.get_plot(p)\n",
-    "    #hv.save(p, outputfile, fmt='png')\n",
-    "\n",
-    "    #renderer.save(frame, outputfile, fmt='png')\n",
-    "    #fig = hv.render(frame, backend='bokeh')\n",
-    "    #hv.save(fig, outputfile, fmt='png')\n",
-    "    #renderer=hv.renderer('bokeh')\n",
-    "    #frame_opts = opts.Image(cmap='viridis', colorbar_position='right',\n",
-    "    #                width=600, height=250, colorbar=True, colorbar_opts=colorbar_opts)\n",
-    "    #frame.redim.label(x='X (km)', y='Y (km)').opts(frame_opts)\n",
-    "    #renderer.save(p, outputfile, fmt='png')"
+    "    # Direct exporting to PNG is possbile but resolution cannot be controlled.\n",
+    "    # You may increase the frame_width; then you also need to increase\n",
+    "    #     the size of font. You can avoid such inconvenience by exporting to HTML.\n",
+    "    # hv.save(p, outputfile, fmt='png', backend='bokeh')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "'''\n",
-    "from selenium import webdriver\n",
-    "from selenium.webdriver.firefox.options import Options\n",
-    "from time import sleep\n",
-    "options = Options()\n",
-    "options.add_argument('--headless')\n",
-    "\n",
-    "driver = webdriver.Firefox(options=options)\n",
-    "#driver = webdriver.Firefox()\n",
-    "#driver.get('file:///home/teem/Github/pyfvcom/examples/png/tri_sal_001.html')\n",
-    "driver.get('https://www.google.com/')\n",
-    "sleep(1)\n",
-    "\n",
-    "#width = driver.execute_script(\"return document.body.scrollWidth;\")\n",
-    "#height = driver.execute_script(\"return document.body.scrollHeight;\")\n",
-    "#driver.set_window_size(width,height)\n",
-    "driver.get_screenshot_as_file(os.getcwd() + \"png/tri_sal_001.png\")\n",
-    "driver.quit()\n",
-    "'''"
+    "## Load and plot HTML"
    ]
   },
   {
@@ -840,9 +800,15 @@
    "source": [
     "from IPython.display import HTML\n",
     "from PIL import Image\n",
-    "file = display(HTML(filename = \"/home/teem/Github/pyfvcom/examples/png/tri_sal_001.html\"))\n",
-    "#png=Image(file)\n",
-    "#file.visualize(filename=\"/home/teem/Github/pyfvcom/examples/png/tri_sal_001.png\")"
+    "file = display(HTML(filename = \"/home/teem/Github/pyfvcom/examples/png/tri_sal_001.html\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading html and exporting to PNG using [pyppeteer](https://github.com/pyppeteer/pyppeteer)\n",
+    "## Example of handling web page"
    ]
   },
   {
@@ -856,6 +822,7 @@
     "from pyppeteer import launch\n",
     "from pyppeteer.browser import Browser\n",
     "from pyppeteer.page import Page\n",
+    "# To avoid an error, the following should be invoked.\n",
     "nest_asyncio.apply()\n",
     "\n",
     "async def main():\n",
@@ -890,42 +857,107 @@
     "    await page.screenshot({'path': 'example.png'})\n",
     "    await browser.close()\n",
     "\n",
-    "\n",
-    "asyncio.get_event_loop().run_until_complete(main())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "async def main():\n",
-    "\n",
-    "    browser = await launch(headless=True)\n",
-    "    page = await browser.newPage()\n",
-    "\n",
-    "    await page.goto('file:///home/teem/Github/pyfvcom/examples/png/tri_sal_001.html')\n",
-    "    await page.setViewport({'width': 600, 'height': 280, 'deviceScaleFactor': 2})\n",
-    "    await page.waitFor(3000)\n",
-    "    await page.screenshot({'path': 'example.png', 'scale':1})\n",
-    "    await browser.close()\n",
-    "\n",
     "asyncio.get_event_loop().run_until_complete(main())"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exporting from HTML to PNG using [pyppeteer](https://github.com/pyppeteer/pyppeteer)\n",
+    "Specify the original image `width` and `height`; then specify `clip` area to adjust the boundingbox in a trial and error manner. To inrease the resolution, specify `deviceScaleFactor`. \n",
+    "This often results in a error of `connection unexpectedly closed`; thus this work should be done in bash shell (though still the problem occurs)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "async def main(html_url, png_path=None, pdf_path=None, width=1920, height=1080, \n",
+    "                   deviceScaleFactor=5, waitFor=3000, clip=None):\n",
+    "    '''\n",
+    "    Loading HTML (webpage) and exporting to PNG with specifying DPR using pyppetter\n",
+    "    Tested on Ubuntu 20.04 LTS on WSL2\n",
+    "    https://pyppeteer.github.io/pyppeteer/reference.html#browser-class\n",
+    "    https://miyakogi.github.io/pyppeteer/reference.html#page-class\n",
+    "    https://github.com/erdewit/nest_asyncio\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    html_url : str\n",
+    "        e.g.: \"file:///home/teem/Github/pyfvcom/examples/png/example.html\"\n",
+    "    out_path : str\n",
+    "        Output PNG path\n",
+    "    width : int, optional\n",
+    "        Viewport width or original image width (adjust in a trial and error manner)\n",
+    "    height : int, optional\n",
+    "        Viewport height or original image height (adjust in a trial and error manner)\n",
+    "    deviceScaleFactor : int, optional\n",
+    "        DPR (Device Pixel Ratio) = DPI/72. E.g., 5 corresponding to 360 DPI\n",
+    "    waitFor : int, optional\n",
+    "        Wait for function, timeout, or element which matches on page (milliseconds)\n",
+    "    clip : dict, optional\n",
+    "        Clipping area of the page\n",
+    "        {\"x\"(int): x-coordinate of top-left corner of clipping area, \"y\"(int): y-coordinate, \n",
+    "         \"width\"(int): width of clipping area, \"height\"(int): height}\n",
+    "    '''\n",
+    "\n",
+    "    browser = await launch(headless=True)\n",
+    "    page = await browser.newPage()\n",
+    "\n",
+    "    await page.goto(html_url)\n",
+    "    # 'deviceScaleFactor' = DPR (Device Pixel Ratio) = DPI/72\n",
+    "    # 'hasTouch': True => Activates reloading browser page so that scaling (zooming) with\n",
+    "    #                     increasing resolution being implemented.\n",
+    "    await page.setViewport({'width': width, 'height': height,\n",
+    "                            'deviceScaleFactor': deviceScaleFactor,\n",
+    "                            'hasTouch': True})\n",
+    "    await page.waitFor(3000)\n",
+    "    #if png_path is not None:\n",
+    "    # await page.screenshot({'path': out_path, 'scale':1})\n",
+    "    await page.screenshot(path=png_path, scale=1, clip=clip)\n",
+    "    #if pdf_path is not None:\n",
+    "    #    await page.pdf(path=pdf_path, scale=1, width=width, height=height)\n",
+    "    await browser.close()\n",
+    "\n",
+    "html_url = \"file:///home/teem/Github/pyfvcom/examples/png/tri_sal_000.html\"\n",
+    "png_path  = \"./png/tri_sal_000.png\"\n",
+    "# PDF may be unstable (often becoming busy).\n",
+    "pdf_path  = None # \"./png/tri_sal_001.pdf\"\n",
+    "\n",
+    "# Adjust width and height in a trial and error manner\n",
+    "width=700; height=340\n",
+    "clip = None # {\"x\": 20, \"y\": 10, \"width\": 600, \"height\": 250}\n",
+    "asyncio.get_event_loop().run_until_complete(main(html_url, png_path, pdf_path,\n",
+    "    width=width, height=height, clip=clip))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# asyncio does not work well in for loop.\n",
+    "# Set PNG output file path\n",
     "'''\n",
-    "# Chronium is required.\n",
-    "from html2image import Html2Image\n",
-    "url = 'file:///home/teem/Github/pyfvcom/examples/png/tri_sal_001.html'\n",
-    "hti = Html2Image()\n",
-    "hti.screenshot(url=url, save_as='python_org.png')\n",
+    "dirpath = \"./png/\"\n",
+    "core = \"tri_sal_\"\n",
+    "# Adjust width and height in a trial and error manner\n",
+    "width=700; height=340\n",
+    "for time in range(1):\n",
+    "    html_url = f\"file:///home/teem/Github/pyfvcom/examples/png/{core}{time:03}.html\"\n",
+    "    png_path = f\"{dirpath}{core}{time:03}.png\"\n",
+    "    print(f\"png_path={png_path}\")\n",
+    "    print(f\"html_url={html_url}\")\n",
+    "    #loop = asyncio.get_event_loop()\n",
+    "    #loop.run_until_complete(main(html_url, png_path,\n",
+    "    #    width=width, height=height, clip=None))\n",
+    "    #loop.close()\n",
+    "    asyncio.get_event_loop().run_until_complete(main(html_url, png_path,\n",
+    "        width=width, height=height, clip=None))\n",
     "'''"
    ]
   },
@@ -944,11 +976,12 @@
    "outputs": [],
    "source": [
     "output_png=\"animation.png\"\n",
-    "cmd = \"apngasm64.exe\" + \" \" + pngpath + output_png + \" \" + pngpath + core + \"*.png\" + \" \" + \"1 1\"\n",
+    "cmd = \"apngasm64.exe\" + \" \" + dirpath + output_png + \" \" + dirpath + core + \"*.png\" + \" \" + \"1 1\"\n",
     "print(cmd)\n",
     "subprocess.call(cmd, shell=True)\n",
-    "web=\"file:///C:/work/2021/thesis/MiwaTakeshi2021.4-2022.3/PyFVCOM/png/\" + output_png\n",
-    "print(web)"
+    "web=\"file:///home/teem/Github/pyfvcom/examples/png/\" + output_png\n",
+    "print(web)\n",
+    "# Copy web in the browser, and an animation can be seen."
    ]
   },
   {
@@ -966,11 +999,6 @@
     "- To overlay coastline, append ` * fvcom.plot_coastline(color='red', line_width=0.5, x_range=x_range, y_range=y_range)`\n",
     "- **Caution:** Plotting coastline takes considerable time."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1015,7 +1043,7 @@
     "                   label_standoff=4, width=15)\n",
     "# Customize Image plot.\n",
     "p_opts = opts.Image(tools=['hover'], cmap='viridis', colorbar_position='right',\n",
-    "                    width=600, height=250, colorbar=True, colorbar_opts=colorbar_opts)\n",
+    "                    frame_width=400, aspect='equal', colorbar=True, colorbar_opts=colorbar_opts)\n",
     "p.redim.label(x='X (km)', y='Y (km)').opts(p_opts)\n",
     "\n",
     "# You may further customize by appending .redim() and .opts() as follows:\n",
@@ -1069,7 +1097,7 @@
     "                   label_standoff=4, width=15)\n",
     "# Customize Image plot.\n",
     "p_opts = opts.Image(tools=['hover'], cmap='viridis', colorbar_position='right',\n",
-    "                    width=600, height=250, colorbar=True, colorbar_opts=colorbar_opts)\n",
+    "                    frame_width=400, aspect='equal', colorbar=True, colorbar_opts=colorbar_opts)\n",
     "p.redim.label(x='X (km)', y='Y (km)').opts(p_opts)\n",
     "\n",
     "# You may further customize by appending .redim() and .opts() as follows:\n",
@@ -1109,15 +1137,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#hv.help(hv.RGB)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def hook(plot, element):\n",
     "    '''\n",
     "    Enforce plot customization by modifying plot object directly using bokeh.\n",
@@ -1146,7 +1165,7 @@
     "# Customize Image plot using hooks.\n",
     "# See the axes label's font style becomeing normal and axes lines thicker .\n",
     "p_opts = opts.Image(tools=['hover'], cmap='viridis', colorbar_position='right',\n",
-    "                    width=600, height=250, colorbar=True, colorbar_opts=colorbar_opts,\n",
+    "                    frame_width=400, aspect='equal', colorbar=True, colorbar_opts=colorbar_opts,\n",
     "                    hooks=[hook])\n",
     "\n",
     "p.opts(p_opts).redim.label(x='X (km)', y='Y (km)')"
