--- a/examples/pyfvcom_plot_example.ipynb
+++ b/examples/pyfvcom_plot_example.ipynb
@@ -42,6 +42,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Specify FVCOM OUTPUT NetCDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ncfile = 'tvdf01_w3_0001.nc'\n",
+    "ncfile = 'tb_futtsu_0001.nc'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Check the FVCOM output NetCDF\n",
     "`FileReader` instance takes long time; so better to first check dims and variables using `ncread`"
    ]
@@ -54,8 +71,8 @@
    "source": [
     "# Activate to chack NetCDF\n",
     "'''\n",
-    "ds = ncread('tokyobay_futtsu_0001.nc')\n",
-    "#ds ### Activate to check\n",
+    "ds = ncread(ncfile)\n",
+    "ds ### Activate to check\n",
     "'''"
    ]
   },
@@ -69,9 +86,9 @@
    "source": [
     "# Create an object which holds the model outputs. We're only loading\n",
     "# surface elevation and temperature for the first 200 time steps.\n",
-    "# fvcom = FileReader('tokyobay_futtsu_0001.nc', dims={'time': [0,1]}, variables=['zeta', 'temp'])\n",
-    "fvcom = FileReader('tokyobay_futtsu_0001.nc', dims={'time': [0,1,2]}, variables=['zeta', 'temp'], zone=54)\n",
-    "#fvcom = ncread('tokyobay_futtsu_0001.nc')\n",
+    "fvcom = FileReader(ncfile, dims={'time': [0,1]}, variables=['zeta', 'temp'])\n",
+    "# fvcom = FileReader(ncfile, dims={'time': [0,1,2]}, variables=['zeta', 'temp'], zone=54)\n",
+    "#fvcom = ncread(ncfile)\n",
     "#fvcom"
    ]
   },
@@ -317,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
