--- a/examples/pyfvcom_plot_example_tst.ipynb
+++ b/examples/pyfvcom_plot_example_tst.ipynb
@@ -37,7 +37,7 @@
     "import sys\n",
     "import warnings\n",
     "# warnings.simplefilter('ignore') # Comment out to show warnings\n",
-    "%matplotlib inline"
+    "#%matplotlib inline"
    ]
   },
   {
@@ -353,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
